--- a/4.Design Theory.md
+++ b/4.Design Theory.md
@@ -73,6 +73,7 @@
 - 위의 예시였던 Closuer {A, B}+는 C, D, E를 결정할 수 있으므로 Key는 맞으나
   - Minimal 한지 알 수 없으므로, 아직은 Super Key이다. 
   - {A, B}에서 B를 지워버리면 A 하나로는 A, B, C, D, E를 모두 만들 수 없으므로 이는 Key이다!
+- Key에 속하는 Attribute들을 __Prime Attribute__ 라고 한다. (opp. __non-prime attribute__)
 
 ### Closing Set of Functional Dependancies
 - ex) S = A=>B, A=>C, B=>A, B=>C, C=>A, C=>B 일 때, S의 Minimal Basis는 무엇인가?
@@ -121,11 +122,11 @@
 
 ### 3rd NF
 - 당연히 2nd NF를 만족하며,
-- Transitive한 FD가 존재해서는 안된다!
+- Candidate Key와 Transitive한 FD가 존재해서는 안된다!
   - ex) Team(TeamName, Address, ManagerID, ManagerHireDate)
     - PK(TeamName)
     - TeamName => ManagerID => ManagerHireDate
-    - 2NF는 맞지만, 3NF는 안된다! why?) Transitive가 존재한다.  
+    - 2NF는 맞지만, 3NF는 안된다! why?) PK인 TeamName과 Transitive가 존재한다.  
  
 ### Boyce-Codd Normal Form(BCNF)
 - 당연히 3rd NF를 만족하며,
@@ -141,8 +142,8 @@
 - Input : R0, set S0(FDs)
 - Output : R1, R2, .. , Rn such that R0 = R1 join R2 join .. join Rn
 - Process
-  1. R0이 BCNF에 위배되지 않는가? ==> R0을 그대로 Return한다.
-  2. 위배된다면, 위배되지 않도록 FD set S0을 S1과 S2로 Decompose 시켜야 한다.
+  1. R0(X==>Y)이 BCNF에 위배되지 않는가? ==> R0을 그대로 Return한다.
+  2. 위배된다면, 위배되지 않도록 R1과 R2로 자르는데, R1은 X+(Closure), R2는 X본인과 Closure이 아닌 나머지 Attributes. 
   3. BCNF에 완전히 위배되지 않을 때 까지 위의 과정 반복.
 - Example
   - Team(TeamName, Address, ManagerID, ManagerHireDate)
