--- a/5. SQL.md
+++ b/5. SQL.md
@@ -1,5 +1,58 @@
 # SQL
 ---
 ## SQL(Structured Query Language)
+> 왜 SQL을 쓸까?  
+> 방대한 양의 데이터를 구체적으로 특정하지 않고도 제어할 수 있는 고 레벨의 언어이기 때문이다.  
 
-##
+## Data Definition
+- CREATE TABLE : Make table
+```SQL
+CREATE TABLE Moive(
+  title VARCHAR(10),
+  year INT
+);
+```
+- DROP TABLE : Remove table
+- Element Declaration
+  - INT(INTEGER)
+  - REAL(FLOAT)
+  - CHAR(n) : fixed length 'n'
+  - VARCHAR(n) : string up to 'n'
+- Dates and Times
+  - DATE '2002-09-30' : Type of DATE
+  - TIME '15:30:02.5' : Type of TIME
+- Define Keys
+```SQL
+CREATE TABLE Beers(
+  name CHAR(20) UNIQUE, // Same as PRIMARY KEY
+  manf CHAR(20)
+);
+
+CREATE TABLE Sells( // Multiattribute KEY
+  bar CHAR(20),
+  beer VARCHAR(20),
+  price REAL,
+  PRIMARY KEY(bar, beer)
+);
+```
+  - 여기서, PRIMARY KEY와 UNIQUE의 차이는
+  - PRIMARY KEY는 NULL Attribute가 어떤 Tuple 내에도 존재해서는 안된다.
+  - UNIQUE는 NULL Attribute 또한 존재할 수 있다.
+
+- Other Declaration for Attributes
+```SQL
+CREATE TABLE Drinkers(
+  name CHAR(30) PRIMARY KEY,
+  addr CHAR(50) DEFAULT '123 Sesame St.',
+  phone CHAR(16) NOT NULL
+);
+```
+- Inserting a Tuple
+```SQL
+INSERT INTO Drinkers(name, addr, phone)
+VALUES ('Jin-Seop Sim', 'Pusan 234', '010-1234-5678');
+```
+  - 만약 필요한 Attribute를 다 입력하지 않으면 어떻게 될까? 그럼 NULL 값으로 채워지게 되므로, Anomaly가 발생할 수가 있다!
+  - 따라서 반드시 NOT NULL 선언을 해주어야 NULL 값이 들어가지 않는다.
+
+## Data Manipulation
