--- a/5. SQL.md
+++ b/5. SQL.md
@@ -152,8 +152,25 @@ WHERE bar = 'Joe''s Bar' AND Frequents.drinker = Likes.drinker; // 서로 다른
 - 이를 표로 가시화 시키면 아래와 같다.
 ![image](https://user-images.githubusercontent.com/71700079/142446009-4434de06-fefc-4261-b8a8-0a8a107b1b28.png)  
 
-
+```SQL
+SELECT b1.name, b2.name
+FROM Beers b1, Beers b2 // 이렇게 하나의 테이블을 두 가지 이름으로 만들어서
+WHERE b1.manf = b2.manf AND b1.name < b2.name; // 같은 제조사를 가진 두 맥주를 알파벳 순서의 Tuple로 반환한다. (Bud, Miller)
 ```
+### Set operator
+- Union : 두 Clause의 결과를 합친다.
+- Intersection : 두 Clause 결과의 공통된 부분만 뽑아낸다.
+```SQL
+(SELECT name, address
+FROM MoiveStar
+WHERE gender = 'F')
+INTERSECT // 이렇게 교집합을 찾으면, netWorth가 1000만을 넘는 여성 배우의 이름과 주소를 뽑아낸다.
+(SELECT name, address
+FROM MovieExec
+WHERE netWorth > 10000000)
+```
+- Difference : 두 Clause의 교집합을 뺀 나머지를 뽑아낸다.
+
 ## Subqueries
 ### IN operator
 ### Exists operator
