Update 5. SQL Grammer.md

--- a/5. SQL Grammer.md
+++ b/5. SQL Grammer.md
@@ -239,3 +239,23 @@ WHERE Salary > ALL (SELECT Salary
                     WHERE Department_id = 20);
 ```
 - 위의 예제는 부서ID가 20인 부서의 사람들이 받는 모든 사람의 연봉보다 더 많은 연봉을 받는 사람들의 정보를 Select한다.
+
+## Join Operator
+- CROSS JOIN : Cartesian Product
+- JOIN : Theta Join
+- NATURAL JOIN : Natural Join, 앞서 배웠듯이 Theta join 중에서 연산자가 '=' 인 것이 Natural Join이다.
+
+## Aggregation Operator
+- SUM() : 합을 구한다.
+- AVG() : 평균을 구한다.
+- COUNT() : 수를 센다.
+- MIN(), MAX() : 최소, 최대를 구한다.
+- 이 함수들은, NULL Value들은 무시하고 결과를 출력한다. 만약 non-NULL Value가 없다면, 결과도 NULL이다.
+- Example
+```SQL
+SELECT AVG(DISTINCT price)
+FROM Sells
+WHERE beer = 'Bud'; // 버드와이저의 가격의 평균을 구한다. 대신 중복없이.
+```
+
+## Grouping Operator
