Update 5. SQL Grammer.md

--- a/5. SQL Grammer.md
+++ b/5. SQL Grammer.md
@@ -50,7 +50,7 @@
   ```
 ### Inserting a Tuple
   ```SQL
-  INSERT INTO Drinkers(name, addr, phone)
+  INSERT INTO Drinkers(name, addr, phone) // 굳이 원형을 적지 않아도 되지만, 적어주는 것이 어떤 Attribute를 추가했는지 안헀는지 알기 쉽다.
   VALUES ('Jin-Seop Sim', 'Pusan 234', '010-1234-5678');
   ```
   - 만약 필요한 Attribute를 다 입력하지 않으면 어떻게 될까? 그럼 NULL 값으로 채워지게 되므로, Anomaly가 발생할 수가 있다!
@@ -65,6 +65,7 @@
   SET City = 'Busan' // 이렇게 UPDATE SET Clause를 이용하면, Column이 아닌 한국에 사는 사람들의 도시만(Row) 바꾸게 된다.
   WHERE Country = 'Korea';
   ```
+  
 ### Deleting Attributes
   ```SQL
   DROP TABLE Bars
@@ -256,6 +257,89 @@ WHERE Salary > ALL (SELECT Salary
 SELECT AVG(DISTINCT price)
 FROM Sells
 WHERE beer = 'Bud'; // 버드와이저의 가격의 평균을 구한다. 대신 중복없이.
+
+SELECT bar, MIN(price) // 이렇게는 쓸 수 없다.
+FROM Sells // 왜냐하면 Aggregation이 사용되었으면, 반드시 다른 column도 aggregate거나 group화 되어야 하기 때문이다.
+WHERE beer = 'Bud'; // bar은 그냥 column이라서, 이는 SQL에서 쓸 수 없다.
 ```
 
 ## Grouping Operator
+```SQL
+SELECT drinker, AVG(price)
+FROM Frequents, Sells
+WHERE beer = 'Bud' AND Frequents.bar = Sells.bar
+GROUP BY drinker // drinker column을 기준으로 Group화 시킨다.
+// 이렇게 그룹화하면 Drinker이 자주가는 bar들의 Budwiser 가격의 평균이 Drinker의 옆으로 달리게 된다.
+```
+### Grouping - Having
+> Having 연산자는 Group by 이후의 WHERE이라고 생각하면 된다.  
+```SQL
+SELECT beer, AVG(price)
+FROM Sells
+GROUP BY beer
+HAVING COUNT(bar) >= 3 // 이렇게 조건을 걸면 3개 이상의 bar에서 팔리는 beer만 Group화 된다.
+
+SELECT COUNT(CustomerID), Country // Country와 Customer의 수를 SELECT 하는데,
+FROM Customers
+GROUP BY Country // Country에 대해 그룹화 한다. 즉 한 나라에 몇 명의 고객이 있는가?
+HAVING COUNT(CustomerID) > 5 // 그룹화를 했을 때, 고객이 6명 이상인 나라만 출력
+ORDER BY COUNT(CustomerID) DESC; // 내림차순 정렬
+```
+
+## Database modification with Subquery
+- Insertion
+```SQL
+INSERT INTO PotBuddies // PotBuddies라는 Table에 
+(SELECT d2.drinker // Sally와 같은 Bar에 다니는 Sally가 아닌 Drinker들을 한번에 저장하는 Subquery이다.
+ FROM Frequetns d1, Frequents d2
+ WHERE d1.drinker = 'Sally' AND 
+       d2.drinker <> 'Sally' AND // d2를 출력하는데, d2는 샐리가 아닌 사람들.
+       d1.bar = d2.bar // 하지만 그 사람들은 샐리와 다니는 bar가 같다.
+ );
+ ```
+ - Deletion
+ ```SQL
+DELETE FROM Likes // 모든 Column 삭제.
+
+DELETE FROM Beers b
+WHERE EXISTS(SELECT name // Beers의 b와 같은 제조사지만, 이름이 다른 Beer들이 있다면 True를 반환.
+             FROM Beers  // 즉, 한 제조사 당 Beer을 하나만 남기겠다는 말이다.
+             WHERE manf = b.manf AND name <> b.name); 
+
+DELETE FROM Beers b
+WHERE EXISTS(SELECT a.name FROM Beers a // 이렇게 내부에 a를 새로 선언해서 Delete를 해버리면, 모든 Tuple을 다 지워버린다.
+             WHERE a.manf = b.manf AND a.name <> b.name); // 왜? Deletion 방식이 Mark all tuples 방식이기 때문.
+```
+- Deletion은 Subquery에 해당하는 모든 Tuple에 Mark를 해놓고, Marked tuples를 모두 지워버린다.
+- 위의 예시는 b를 제외한 나머지에 모두 Mark를 하지만, 그 아래의 예시는 모든 Tuples에 다 Mark를 해버리므로 안되는 것!
+- 앞서 살펴보았던 NO EXISTS의 예시와 유사하다!
+
+## Foreign Key
+> Foreign Key(외래키)란 다른 Table의 Key 값을 의미한다.  
+> 우리는 다른 Table의 Key 값을 주로 참조한다.  
+```SQL
+CREATE TABLE Studio(
+  name CHAR(20) PRIMARY KEY,
+  address VARCHAR(100),
+  presC# INT REFERNCE MovieExec(cert#) // 이 부분이 Foreign Key 참조 부분이다.
+);
+// 혹은 pres C# INT, 
+//      FOREIGN KEY (presC#) REFERENCE MovieExec(cert#) 로 선언해도 된다.
+```
+
+### Referential Constraint
+> 앞서 우리가 배웠던 것들 중에 Referential Integrity, 참조 무결성이 있었다.  
+> 그것은 우리가 참조하려는 외래 키가 실제로 존재하는 값이어야 한다는 것이다.  
+> 그렇지 않을 경우에는 Violation이 발생하는 것이다.  
+
+### Deferable vs Non Deferable
+```SQL
+CREATE TABLE Studio(
+  name CHAR(20) PRIMARY KEY,
+  address VARCHAR(100),
+  presC# INT UNIQUE,
+  REFERNCE MovieExec(cert#) DEFERABLE INITIALLY DEFERED
+);
+```
+- Deferable : Violation이 발생하면, 일단 미뤄두고 테이블에 Key나 Attributes들을 모두 삽입한 뒤에 다시 참조한다.
+- Non-Deferable : Violation이 발생하면, 무조건 그 Query는 Refuse된다.
