Update 5. SQL Grammer.md

--- a/5. SQL Grammer.md
+++ b/5. SQL Grammer.md
@@ -61,6 +61,9 @@
   ALTER TABLE Bars ADD // 이는 새 Column을 만드는 Clause이다.
     phone char(16) DEFAULT 'unlisted';
   
+  ALTER TABLE Bars
+    DROP phone; // 이는 phone column을 지우는 Clause이다.
+  
   UPDATE Customers
   SET City = 'Busan' // 이렇게 UPDATE SET Clause를 이용하면, Column이 아닌 한국에 사는 사람들의 도시만(Row) 바꾸게 된다.
   WHERE Country = 'Korea';
