Update 5. SQL Grammer.md

--- a/5. SQL Grammer.md
+++ b/5. SQL Grammer.md
@@ -244,7 +244,7 @@ WHERE Salary > ALL (SELECT Salary
 ## Join Operator
 - CROSS JOIN : Cartesian Product
 - JOIN : Theta Join
-- NATURAL JOIN : Natural Join, 앞서 배웠듯이 Theta join 중에서 연산자가 '=' 인 것이 Natural Join이다.
+- NATURAL JOIN : Natural Join, 앞서 배웠듯이 Theta join 중에서 연산자가 '=' 인 것이 Natural Join이다. 근데? 중복되는 Column을 지우는.
 
 ## Aggregation Operator
 - SUM() : 합을 구한다.
