Update 5-2. SQL Grammer.md

--- a/5-2. SQL Grammer.md
+++ b/5-2. SQL Grammer.md
@@ -40,3 +40,7 @@ CREATE TRIGGER BeerTrigger
   INSERT INTO Beers(name)
          VALUES(NewTuple.beer);
 ```
+
+## Transaction
+
+### Serializability
