Update 5-2. SQL Grammer.md

--- a/5-2. SQL Grammer.md
+++ b/5-2. SQL Grammer.md
@@ -42,5 +42,14 @@ CREATE TRIGGER BeerTrigger
 ```
 
 ## Transaction
+> DB에서 __Transaction이란__ 일종의 Scheduling이다.  
+> 어떤 사용자 두 명이 Query를 동시에 넣었을 때, 이를 동시처리 해버리면 분명 충돌이 생길 것이다.  
+> 따라서 Transaction을 잘 설계하는 것이 중요하다.  
+
+### ACID
+- Atomicity(원자성) : Transaction이 모두 DB에 등록이 되던가, 아니면 싹 다 등록이 되지 않아야 한다.(일부 등록 이런건 X)
+- Consistency(일관성) : 작업 처리의 결과가 항상 일관성 있어야 한다.
+- Isolation(독립성) : 각 Transaction은 서로의 연산 과정에 끼어들 수 없으며 모두 독립적으로 진행된다.
+- Durability(지속성) : Transaction이 반영되었을 때, 그 결과는 영구 지속 되어야 한다.
 
 ### Serializability
