Update 1. Data Science Process.md

--- a/2022-Data Science/1. Data Science Process.md
+++ b/2022-Data Science/1. Data Science Process.md
@@ -16,3 +16,9 @@
 5. EDA(위의 5번과 동일)
 6. Statistical Analysis
 7. Visualization and Writing a paper
+
+### What is EDA?
+> EDA(Exploratory Data Analysis), 탐색적 분석 기법이다.  
+> 데이터를 수집한 후, 이를 분석하기 전에 통계학적으로 해석하거나 그래프를 그림으로써 시각화하고 직관화하는 작업을 의미한다.  
+> Data Preparation 과정에서도 시각화를 반복 적용하여, 데이터 자체에 EDA를 수행한다.  
+> 이러한 과정을 거쳐 분석 가능한 형태의 데이터를 생성한다.  
