Update 2. Data Type.md

--- a/2022-Data Science/2. Data Type.md
+++ b/2022-Data Science/2. Data Type.md
@@ -1,5 +1,9 @@
 # Data Type
 ---
+## 우리는 왜 Data type에 대해 배우는가?
+> Data를 가지고 우리가 무엇을 할 수 있는 지를 아는게 중요하다.  
+> 이는 우리가 Data를 원하는 방향으로 가공하도록 도와주기 때문이다.  
+
 ## Raw Data(원시 데이터)
 > 가공되지 않은 측정 자료를 의미한다.  
 > 측정 직후의 가공되지 않은 자료를 의미하며, 쓸만한 자료로 만들기 위해서는 가공을 해야한다.  
@@ -10,4 +14,30 @@
 ### Table
 > _"데이터 과학은 테이블 놀이이다"_  
 > _"대부분의 작업에서는 데이터를 테이블 형태로 만들기 위해  
-> 데이터를 가공하고 처리하고 테이블을 만들어 분석한다."_  
+> 데이터를 가공하고 처리하고 테이블을 만들어 분석한다."_   
+
+- 보편적으로 데이터는, 표에 열과 행을 이용해 정리한다.
+
+## Data 분류 기준
+> Data Science에서는 통계학에서 사용하는 분류 기준을 사용하도록 한다.  
+
+## Basic Data Types
+- 측정수준
+  - 명목(Nomial)
+    - 순위가 존재하지 않는다.
+    - 임의의 간격을 갖는다.
+    - 확인분류를 통해 비교한다.
+    - ex) 성별, 분류, 운동선수 배번종류
+  - 순서, 서열(ordinal)
+    - 순위가 존재한다.
+    - 임의의 간격을 갖는다.
+    - ex) 학교성적석차, 사회 계층
+  - 등간, 구간(Interval)
+    - 순위가 존재한다.
+    - 모두 일정한 간격을 갖는다.
+    - ex) 온도, 광고 인지도, 주가
+  - 비율(Ratio)
+    - 순위가 존재한다.
+    - 모두 일정한 간격을 갖는다.
+    - 비율의 기준이 되는 절대영점이 존재한다.
+    - ex) 투표율, 나이
