--- a/2022-Data Science/2. Data Type.md
+++ b/2022-Data Science/2. Data Type.md
@@ -25,16 +25,17 @@
 - 측정수준
   - 명목(Nomial)
     - 순위가 존재하지 않는다.
-    - 임의의 간격을 갖는다.
+    - 셀 수는 있지만, 그 값을 평균을 내는 것은 의미가 없다.
     - 확인분류를 통해 비교한다.
     - ex) 성별, 분류, 운동선수 배번종류
   - 순서, 서열(ordinal)
     - 순위가 존재한다.
     - 임의의 간격을 갖는다.
-    - ex) 학교성적석차, 사회 계층
+    - ex) 학교성적석차, 사회 계층, Likert Scale
   - 등간, 구간(Interval)
     - 순위가 존재한다.
     - 모두 일정한 간격을 갖는다.
+    - 비율과 다르게 절대 영점이 존재하지 않는다.
     - ex) 온도, 광고 인지도, 주가
   - 비율(Ratio)
     - 순위가 존재한다.
