Update 2. Data Type.md

--- a/2022-Data Science/2. Data Type.md
+++ b/2022-Data Science/2. Data Type.md
@@ -42,3 +42,5 @@
     - 모두 일정한 간격을 갖는다.
     - 비율의 기준이 되는 절대영점이 존재한다.
     - ex) 투표율, 나이
+  
+![image](https://user-images.githubusercontent.com/71700079/158326384-a5615b1e-6511-4822-ba6b-cd5d503f46bc.png)  
