Update 3.  EDA.md

--- a/2022-Data Science/3.  EDA.md
+++ b/2022-Data Science/3.  EDA.md
@@ -1,7 +1,7 @@
 # EDA(탐색적 데이터 분석)
 ---
 ## EDA?
-> _"이 데이터로 주어진 문제를 풀 수 있느냐?"_  
+>> _"이 데이터로 주어진 문제를 풀 수 있느냐?"_  
 > 주어진 데이터의 모든 측면을 철저히 이해하는 것.  
 > 세운 모든 가설이 맞는지, 새로운 패턴이 발견되지는 않았는지, 추가적인 데이터가 필요하진 않은 지 등,  
 > 이렇게 다양한 각도에서 관찰하고 이해하는 과정을 EDA(Exploratory Data Analysis)이라고 부른다.  
