Update 3.  EDA.md

--- a/2022-Data Science/3.  EDA.md
+++ b/2022-Data Science/3.  EDA.md
@@ -9,3 +9,7 @@
 
 - EDA에는 __원본 데이터, 요약 통계값, 시각화 자료__ 가 모두 필요하다.
 - Data Process에서 EDA에서 만족스러운 결과가 나오지 않는다면, 이전 과정으로 되돌아가 부족한 부분을 채운다.
+- 아래와 같은 질문들을 할 수 있다.  
+![image](https://user-images.githubusercontent.com/71700079/158737440-7f2bcb57-725c-4cf2-8496-d6cfb5559b5f.png)  
+
+
