Update 3.  EDA.md

--- a/2022-Data Science/3.  EDA.md
+++ b/2022-Data Science/3.  EDA.md
@@ -12,4 +12,34 @@
 - 아래와 같은 질문들을 할 수 있다.  
 ![image](https://user-images.githubusercontent.com/71700079/158737440-7f2bcb57-725c-4cf2-8496-d6cfb5559b5f.png)  
 
+## EDA의 역할
+1. 행/열의 수, 놓친 데이터, Data type 등의 정보들을 빠르게 표현할 수 있다.
+2. 잘못된 Data들을 수정할 수 있다.
+3. 히스토그램, Box plot, 차트 등으로 시각화가 가능하다.
+4. 변수들간의 관계를 시각화하고 계산할 수 있다. (Heat map)
 
+## 기초 통계 처리
+- 통계학의 목적
+  1. 가지고 있는 데이터의 설명 : 기술 통계, 수집된 데이터의 정리 및 요약 목적
+  2. 모르는 데이터의 예측 가능 : 추리 통계
+- Type of Descriptive Statistics
+  1. Distribution(분포) : 어떤 값의 빈도
+  2. Central tendency(집중화 경향) : 데이터의 특징을 나타내는 대표값(평균, 중앙값, 최빈값..)
+  3. Dispersion(분산, Variability) : 데이터의 값들이 얼마나 퍼져있는가?
+
+### Frequency Distribution
+> 어떤 값들을 빈도 수에 대하여 정렬한 분포  
+- Frequency Table(도수분포표)
+  - Counts or Frequency(도수)
+  - Relative frequency(상대 도수) : 전체를 100으로 잡고, 빈도 수의 상대적 비율.
+- Graphs
+  - Nominal & Ordinal Data(범주형) : Bar 그래프, Pie 차트
+  - Interval & Ratio(수치형) : Histogram
+
+### Measures of Central Tendency
+> 거의 3개의 측정치에 의해 자료의 경향성을 나타낸다.  
+- Mode(최빈값) : 명목(Nominal) 자료에서 대표값으로 사용하는 값.
+  - Mode가 2개 : Bimodal
+  - Mode가 2개 이상 : Multimodal
+- Median(중앙값) : 서열(Ordinal) 자료는 산술 평균을 쓸 수 없으므로, 중앙값을 사용한다.
+- Mean(산술 평균) : 수치형(Interval, Ratio) 자료에 사용한다.
