Update 3.  EDA.md

--- a/2022-Data Science/3.  EDA.md
+++ b/2022-Data Science/3.  EDA.md
@@ -41,5 +41,38 @@
 - Mode(최빈값) : 명목(Nominal) 자료에서 대표값으로 사용하는 값.
   - Mode가 2개 : Bimodal
   - Mode가 2개 이상 : Multimodal
+  - 최빈값의 단점은? 
+    - 집중화 경향을 측정하기에는 거의 쓸모가 없다.
 - Median(중앙값) : 서열(Ordinal) 자료는 산술 평균을 쓸 수 없으므로, 중앙값을 사용한다.
+  - 왜 중앙값을 사용하는가?
+    - Skewed Distribution에 있어서 집중화 경향을 측정할 수 있는 가장 유용한 지표이다.
+    - Ordinal, Interval, Ratio 자료에만 사용할 수 있다. 
 - Mean(산술 평균) : 수치형(Interval, Ratio) 자료에 사용한다.
+  - Outlier Effect(이상값)
+    - 급격하게 차이가 심한 매우 큰 값에 의해서 평균이 높아지는 것.
+    - Median이 Outlier의 영향을 덜 받는다.
+
+## Variability(Dispersion)
+> 산포도는 자료가 퍼진 정도를 의미한다.  
+
+- 산포도의 측정 요소
+  - Range(범위) : 최고값과 최저값의 차이
+    - Outlier에 영향을 크게 받는다.
+  - Interquartile range(사분위 범위수) : 3사분위수에서 1사분위수를 뺀 값으로, 중간을 지나는 절반의 자료를 의미.
+    - Five-number Summary
+      - Lowest Value
+      - Q1 : 25% Percentile
+      - Q2 : Median
+      - Q3 : 75% Percentile
+      - Q4 : Highest Value
+    - 보통 ```Q1 - 1.5IQR```의 값이나 ```Q3 + 1.5IQR```의 값을 Outlier로 판단한다.
+    - Boxplot(상자수염그래프)로 표현되기도 한다.
+      - 수염의 길이나 편향도를 보고, 왜도(Skewness)를 측정할 수 있다.
+  - Standard deviation(표준 편차) : 평균과의 거리의 평균
+    - 낮은 표준 편차는 값들이 평균에 모여있음을 의미한다.
+    - 반대로 높은 표준 편차는 값들이 평균과 멀리 떨어져 있음을 의미.
+    - The Empirical Rule
+      - (Mean + 3SD) ~ (Mean - 3SD) 의 범위에는 99.7%의 값이 존재한다.
+      - (Mean + 2SD) ~ (Mean - 2SD) 의 범위에는 95%의 값이 존재한다.
+      - (Mean + SD) ~ (Mean -SD) 의 범위에는 68%의 값이 존재한다.
+  - Variance(분산) : 평균과의 거리를 제곱한 것의 평균 
