Update 3.  EDA.md

--- a/2022-Data Science/3.  EDA.md
+++ b/2022-Data Science/3.  EDA.md
@@ -76,3 +76,8 @@
       - (Mean + 2SD) ~ (Mean - 2SD) 의 범위에는 95%의 값이 존재한다.
       - (Mean + SD) ~ (Mean -SD) 의 범위에는 68%의 값이 존재한다.
   - Variance(분산) : 평균과의 거리를 제곱한 것의 평균 
+  - 과연 어떤 지표를 사용하는 것이 좋은 방법인가?
+    - Ordinal Data에 대해서는 Range와 IQR이 유용하다.
+    - Interval Data나 Ratio Data에 대해서는 SD와 Variance가 유용하다.
+    - 하지만 정규분포의 경우, 모든 지표가 다 사용이 가능하다. (SD와 Variance를 주로 사용한다.)
+    - Skewed Distribution의 경우, Outlier의 존재 때문에 IQR이 가장 유용하다.
