--- a/2022-Data Science/4. Visualization.md
+++ b/2022-Data Science/4. Visualization.md
@@ -2,6 +2,11 @@
 ---
 _"Transformation of the symbolic into the geometric"_
 
-## with Matplotlib
+## Nominal Data
+### with Matplotlib
 
-## with Pandas(Dataframe)
+### with Pandas(Dataframe)
+
+## Ordinal Data
+
+## Interval $ Ratio Data
