--- a/2022-Data Science/4. Visualization.md
+++ b/2022-Data Science/4. Visualization.md
@@ -3,10 +3,65 @@
 _"Transformation of the symbolic into the geometric"_
 
 ## Nominal Data
-### with Matplotlib
+> 명목형 데이터는 Pie Chart 및 Bar Chart로 표현이 가능하다.  
 
-### with Pandas(Dataframe)
+### Pie Chart
+- __With Matplotlib__
+```python
+import matplotlib.pyplot as plt
+import numpy as np
 
+labels = ['A', 'B', 'C', 'D', 'E']
+x = np.array([50, 20, 15, 10, 5])
+plt.rc('font', family='NanumBarunGothic')
+plt.pie(x, labels=labels, shadow=True, \ # Pie Chart로 바꾸어주는 함수.
+        startangle=90, autopct='%0.1f %%') # shadow는 그림자, startangle은 시작 각도, autopct는 백분율 설정이다.
+plt.title('시장점유율')
+plt.show()
+```
+- __With Pandas(Dataframe)__
+```python
+import pandas as pd
+myDF = pd.read_csv('https://~/data1.csv')
+myDF.head(n) # Dataframe 내의 처음 n행을 출력한다. 기본은 5행이다.
+             # .tail()은 마지막 n행을 출력한다.
+             # print(myDF)로 출력을 하면, 데이터가 적을 경우 모두 출력하지만 데이터가 많을 경우 요약해서 출력한다.
+
+table = pd.crosstab(index=myDF["group"].values, colnames=["group"], \
+                    columns='participants') # .crosstab() 함수로 도수 분포표를 만든다.
+table.index = ['A', 'B', 'C'] # 도수 분포표의 각 그룹 이름이 A, B, C
+print(table) # 도수 분포표 출력
+table.plot.pie(y='participants', autopct='%0.1f%%') # 도수분포표를 Pie chart로 변환
+```
+
+### Bar Chart
+- __With Matplotlib__
+```python
+import matplotlib as plt
+import numpy as np
+
+x = np.arange(3) # 0, 1, 2
+years = ['2017', '2018', '2019']
+values = [100, 400, 900]
+plt.bar(years, values)
+plt.show() # matplotlib로 Bar chart를 만든다.
+```
+
+- __With Pandas__ 
+```python
+import pandas as pd
+myDF = pd.DataFrame({'Year':years, 'Score':values}) # Dataframe 생성. Column: Value의 형태
+myDF.head()
+myDF.plot.bar(x='year', y='score', rot=0)
+```
 ## Ordinal Data
+> Ordinal Data는 Stacked Bar로 표현이 가능하다.  
+- Example : Likert Scale
 
-## Interval $ Ratio Data
+## Interval & Ratio Data
+> Interval & Ratio Data는 Histogram이나 Boxplot으로 표현이 가능하다.  
+> 특히 Boxplot은 IQR(사분위수)를 측정하기 매우 좋은 그래프가 된다.  
+
+### Histogram
+### Boxplot
+### Bonus : Scatter plot
