--- a/2022-Data Science/4. Visualization.md
+++ b/2022-Data Science/4. Visualization.md
@@ -56,7 +56,18 @@ myDF.plot.bar(x='year', y='score', rot=0)
 ```
 ## Ordinal Data
 > Ordinal Data는 Stacked Bar로 표현이 가능하다.  
+```python
+import pandas as pd
+myDF = pd.DataFrame({'Year':years, 'Score':values}) # Dataframe 생성. Column: Value의 형태
+myDF.head()
+myDF.plot.bar(stacked=True, x='year', y='score', rot=0) # 이렇게 Stacked 속성만 추가해주면 Stacked bar로 표현이 가능하다.
+```
 - Example : Likert Scale
+  - 흔히 설문조사에 사용되는 방식으로, ```매우 그렇다 ~ 전혀 그렇지 않다``` 와 같은 방식으로 점수를 매긴다.
+  - 보통 Horizontal Stacked Bar로 표현이 가능하다.
+```python
+myDF.plot.barh(stacked=True, x='year', y='score', rot=0) # 간단하게 barh 로만 함수명을 바꾸어주면, Horizontal 해진다.
+```
 
 ## Interval & Ratio Data
 > Interval & Ratio Data는 Histogram이나 Boxplot으로 표현이 가능하다.  
