--- a/2022-Data Science/4. Visualization.md
+++ b/2022-Data Science/4. Visualization.md
@@ -74,5 +74,14 @@ myDF.plot.barh(stacked=True, x='year', y='score', rot=0) # 간단하게 barh 로
 > 특히 Boxplot은 IQR(사분위수)를 측정하기 매우 좋은 그래프가 된다.  
 
 ### Histogram
+```python
+impor tmatplotlib as plt
+import numpy as np
+x = np.random.normal(170, 10, 250) # 10 ~ 250사이의 값 170개를 배열로 뽑는다.
+x.mean(), x.std(), x.min(), x.max() # 평균, 표준편차, 최소값, 최대값
+
+plt.hist(x) # 히스토그램으로 변환
+```
+
 ### Boxplot
 ### Bonus : Scatter plot
