--- a/2022-Data Science/4. Visualization.md
+++ b/2022-Data Science/4. Visualization.md
@@ -77,11 +77,42 @@ myDF.plot.barh(stacked=True, x='year', y='score', rot=0) # 간단하게 barh 로
 ```python
 impor tmatplotlib as plt
 import numpy as np
-x = np.random.normal(170, 10, 250) # 10 ~ 250사이의 값 170개를 배열로 뽑는다.
+x = np.random.normal(170, 10, 250) # 정규분포, 평균이 170, 표준편차가 10, 데이터의 수 250개.
 x.mean(), x.std(), x.min(), x.max() # 평균, 표준편차, 최소값, 최대값
 
 plt.hist(x) # 히스토그램으로 변환
 ```
+- Manage of bins
+```python
+n, edges, patch = plt.hist(x, bins = 20) # 이러면 20개의 구간을 잘라서 그래프를 그린다.
+   # 이 때 n은 각 구간의 value(y값), edges는 각 구간의 시작 x값, 그리고 patch는 각 구간의 사각형 크기를 저장한다.
+   
+plt.hist(x, bins = [130, 140, 150, .., 200]) # 이와 같이 bin 구간을 직접 자를 수도 있다.
+plt.hist(x, range=(160, 180), bins=5) # 이러면 160~180 범위를 5구간으로 잘라서 그래프를 그린다.
+```
 
+- Multi Histogram
+```python
+a = np.random.normal(170, 10, 600)
+b = np.random.normal(160, 15, 100)
+plt.hist(a, alpha=0.5) # alpha는 투명도 속성이다.
+plt.hist(b, alpha=0.5, density = False) # density는 default값이 False이다.
+                                        # density가 True가 되면, Y축이 빈도 수가 아닌 전체 표본에 대한 비율이 된다.
+plt.show()
+```
 ### Boxplot
+```python
+import seaborn as sns
+import pandas as pd
+iris = sns.load_dataset('iris')
+c1 = iris[iris['species'] == 'setosa'] # Iris 표의 species가 setosa인 것들만 뽑아서 표로 뽑는다.
+c2 = iris[iris['species'] == 'versicolor']
+c3 = iris[iris['species'] == 'virginica']
+
+plt.boxplot((c1['petal_length'], c2['petal_length'], c3['petal_length'])) # 꽃잎의 길이 Column의 값에 따라 그래프를 그린다.
+plt.xticks([1,2,3], ['setosa', 'versicolor', 'virginica'])
+
+boxplot = iris.boxplot(column = 'petal_length', by = 'species') # Pandas에서는 이렇게 다룬다.
+```
+- Boxplot에서 수염 밖에 동그라미로 표현되는 것은, __Outlier__ 값이다.
 ### Bonus : Scatter plot
