Update 5. Naive Bayes.md

--- a/2022-Data Science/5. Naive Bayes.md
+++ b/2022-Data Science/5. Naive Bayes.md
@@ -26,3 +26,6 @@
 > 하지만 추가적인 사건 C가 발생한다면?  
 
 - Example 2 : Monty Hall Problem
+
+## Naive Bayes Classifier
+> Class들 중에 우리가 원하는 Class를 Bayes' Theorem을 통해 분류해내는 작업.  
