Update 5. Naive Bayes.md

--- a/2022-Data Science/5. Naive Bayes.md
+++ b/2022-Data Science/5. Naive Bayes.md
@@ -29,3 +29,8 @@
 
 ## Naive Bayes Classifier
 > Class들 중에 우리가 원하는 Class를 Bayes' Theorem을 통해 분류해내는 작업.  
+> 어떤 Attribute들과 Class가 주어졌을 때, 어떤 Class가 될 확률을 묻는 것이다.  
+- Example : 비가 올 확률
+  - 기온이 높고 온도가 낮고 바람이 많이 불고 날씨가 좋은데 비가 올 확률이 얼마나 될까?  
+  ![image](https://user-images.githubusercontent.com/71700079/161407624-cd9fd4e7-64f2-4255-b573-d79933bee54f.png)  
+
