Update 5. Naive Bayes.md

--- a/2022-Data Science/5. Naive Bayes.md
+++ b/2022-Data Science/5. Naive Bayes.md
@@ -5,7 +5,9 @@
 > 그 때 구해지는, 어떤 사건이 발생했을 때 특정 사건이 발생할 확률.  
 
 - Bayesian 관점?
-  - 가설, 명제, 신뢰도
+  - 선택된 표본이 특정 사건(부분 집합)에 속한다는 가설, 명제, 주장의 신뢰도
+  - 확률처럼 반복이라는 개념이 존재하지 않는다.
+  - ex) 동전 던지기 : 베이지안 관점으로 보면, 앞면이 나왔다는 주장의 신뢰도가 몇 %인지를 보는 것!
 - Bayes' Theorem  
 ![image](https://user-images.githubusercontent.com/71700079/160537890-a8fcb331-3e62-4b18-84ac-93cef6b5c122.png)  
   - 위의 식은, B사건이 발생했을 때 A사건 또한 발생할 확률에 대한 식이다.
@@ -18,6 +20,9 @@
 ### Expansion of Bayes' Theorem
 > 만약 사건 Ai가 서로 배타적이고 완전하다면?  
 - 전확률 정리(Law of total probability)를 이용하여 베이즈 정리를 확장.
+![image](https://user-images.githubusercontent.com/71700079/161425719-fe6376a2-5b04-4b94-9fea-1589ad223314.png)  
+- 사건 Ai들이 모두 독립이라는 가정 하에,
+  - B & A1 + B & A2 + B & A3 + B & A4 = P(B)
 
 - Example 1 : 검사 시약 문제
 
