--- a/2022-Data Science/5. Naive Bayes.md
+++ b/2022-Data Science/5. Naive Bayes.md
@@ -35,7 +35,21 @@
 ## Naive Bayes Classifier
 > Class들 중에 우리가 원하는 Class를 Bayes' Theorem을 통해 분류해내는 작업.  
 > 어떤 Attribute들과 Class가 주어졌을 때, 어떤 Class가 될 확률을 묻는 것이다.  
+
 - Example : 비가 올 확률
   - 기온이 높고 온도가 낮고 바람이 많이 불고 날씨가 좋은데 비가 올 확률이 얼마나 될까?  
   ![image](https://user-images.githubusercontent.com/71700079/161407624-cd9fd4e7-64f2-4255-b573-d79933bee54f.png)  
 
+- Example : 스팸 메일 분류
+  ![image](https://user-images.githubusercontent.com/71700079/161428550-fa9f2b7f-0ae9-44dd-89c4-8c39be802bbb.png)  
+  - 위와 같은 학습 데이터가 있을 때, "You free contact"라는 내용의 메일이 왔다. 이것은 스팸인가?
+    - P(정상 SMS | SMS 내용) = P(You | 정상 SMS) * P(Free | 정상 SMS) * P(contact | 정상 SMS) * P(정상 SMS)
+    - P(스팸 SMS | SMS 내용) = P(You | 스팸 SMS) * P(Free | 스팸 SMS) * P(contact | 스팸 SMS) * P(스팸 SMS)
+
+### Laplace Smoothing
+> 위의 식 대로라면 스팸 메일의 내용 중 하나의 단어라도 등장 빈도가 0이면, 전체가 0이 된다.  
+> 따라서 이는 지나친 일반화이다!  
+> 이를 방지하기 위해 우리는 __Laplace Smoothing__ 을 이용한다.  
+
+- 각 분자(각 단어의 등장 빈도)에 +1을 해준다.
+  - 이후, 각 분모에 전체 단어의 갯수를 더한다.
