--- a/2022-Data Science/6. Clustering.md
+++ b/2022-Data Science/6. Clustering.md
@@ -41,7 +41,7 @@
   - Manhattan Distance : 두 점 사이의 x축거리 + y축거리가 된다.
   - Distance Measure은 아래와 같은 특성을 가져야 한다.
     - Symmetric : D(A, B) = D(B, A)
-    - Positivity, Self-similarity : D(A, B) >= 0 | D(A, B) = 0 iff A = B
+    - Positivity, Self-similarity : D(A, A) >= 0
     - Triangular Inequality : D(A, B) + D(B, C) >= D(A, C)
 - Connectivity Based : Density를 고려해서 Clustering한다.
   - 임의의 모양을 갖는 Cluster을 형성한다.
