--- a/2022-Data Science/6. Clustering.md
+++ b/2022-Data Science/6. Clustering.md
@@ -46,3 +46,5 @@
 - Connectivity Based : Density를 고려해서 Clustering한다.
   - 임의의 모양을 갖는 Cluster을 형성한다.
   - ex) Density, Contiguity
+
+### K-Means Clustering
