--- a/2022-Data Science/6. Clustering.md
+++ b/2022-Data Science/6. Clustering.md
@@ -47,4 +47,14 @@
   - 임의의 모양을 갖는 Cluster을 형성한다.
   - ex) Density, Contiguity
 
-### K-Means Clustering
+### K-Means Clustering  
+> 임의의 평균을 K개 정해 반복 연산을 통해 오차를 수정해가며 Clustering을 하는 작업이다.  
+> 아래와 같은 과정으로 도식화 할 수 있다.  
+![image](https://user-images.githubusercontent.com/71700079/162912077-e2b14dfe-73a8-4442-b58a-e340f4e06aa5.png)  
+
+- Clustering 기법 중 Partitioning Method(분할법)에 속한다.
+  - Partitioning Method : N개의 Data를 받았을 때 N보다 작거나 같은 K개의 Group으로 분할해서 Cluster을 형성하는 방법.
+- K개의 평균을 쓰는데, K의 값은 사용자가 직접 부여해야한다.
+- 각 Cluster들은 
+- 아래와 같은 Basic Algorithm에 따른다.  
+![image](https://user-images.githubusercontent.com/71700079/162913329-881183a6-1b61-4075-8e48-be99c915b112.png)  
