--- a/2022-Data Science/6. Clustering.md
+++ b/2022-Data Science/6. Clustering.md
@@ -55,6 +55,33 @@
 - Clustering 기법 중 Partitioning Method(분할법)에 속한다.
   - Partitioning Method : N개의 Data를 받았을 때 N보다 작거나 같은 K개의 Group으로 분할해서 Cluster을 형성하는 방법.
 - K개의 평균을 쓰는데, K의 값은 사용자가 직접 부여해야한다.
-- 각 Cluster들은 
-- 아래와 같은 Basic Algorithm에 따른다.  
+- 아래와 같은 간단한 Iterative Algorithm에 따른다.  
 ![image](https://user-images.githubusercontent.com/71700079/162913329-881183a6-1b61-4075-8e48-be99c915b112.png)  
+
+- 초기 Centroids는 보통 랜덤하게 정해지며, 만들어진 군집들의 평균으로 다시 설정된다.
+- K-means는 적절한 Centroid가 찾아지면, 종료된다.
+  - 웬만하면 수 회 안에 종료된다.
+  - 초기에 Centroid를 잘못 설정해버리면, Clustering에 실패할 수도 있다.
+
+### K-means Objective Function
+> Centroid의 적합성을 판단하기 위해서 사용하는 수식인 SSE가 있다.  
+- SSE(Sum of Squared Error) : Euclidean Distance를 이용해서 Centroid의 적합성을 판단한다.  
+![image](https://user-images.githubusercontent.com/71700079/162921667-060c2b9b-f952-49e2-9ecc-567c7b9f526c.png)  
+  - 이 SSE의 값이 작으면 작아질 수록 적합한 Centroid가 되는 것이다. (Centroid에 대해 많이 모여 있음을 의미)
+ 
+### Limitation of K-means
+- 초기 군집의 크기가 너무 다른 경우
+- 초기 군집의 밀집도가 너무 다른경우
+- 구형(Globular, Spherical)의 군집이 아닌 경우
+  - 위의 모든 경우에는 K-means의 K를 늘려서 아래와 같이 해결할 수 있다.  
+  ![image](https://user-images.githubusercontent.com/71700079/162922567-b8497eef-7c9f-4c99-9327-5d038bde503f.png)  
+  ![image](https://user-images.githubusercontent.com/71700079/162922584-4c485493-5ed0-4be4-a026-8a9f2765ddbb.png)  
+
+### Issues with K-menas
+- K-means는 종종 Local optimal에서 종료된다.
+- 적합한 K를 찾기 위해서 우리는 여러번 돌려 보아야 한다.
+  - SSE(Sum of Squared Error)을 통해서 가장 적합한 K를 찾을 수 있다.
+  - SSE 수치가 작을 수록 적합한 것!
+- Nosiy Data나 Outlier에 매우 민감하다. (평균을 사용하기 때문)
+- K-menas는 연속된 n차원 공간에서만 사용이 가능하다.
+
