--- a/2022-Data Science/6. Clustering.md
+++ b/2022-Data Science/6. Clustering.md
@@ -85,3 +85,16 @@
 - Nosiy Data나 Outlier에 매우 민감하다. (평균을 사용하기 때문)
 - K-menas는 연속된 n차원 공간에서만 사용이 가능하다.
 
+## Evaluation : Clustring
+> 이전 시간에 했던 Classifier의 평가 지표에서 이어진다.  
+- Supervised(External)
+  - Jaccard Index = TP/(TP + FN + FP)
+  - Rand index = (TP + TN) / N
+- Unsupervised(Internal)
+  - Cluster Cohesion : Cluster 내에서 얼마나 Centroid에 집중되어 있는가? SSE로 평가할 수 있다.
+  - Cluster Separation : Cluster끼리 얼마나 잘 구별되어 있는가? SSB로 평가할 수 있다.   
+  ![image](https://user-images.githubusercontent.com/71700079/162931459-b45e47ea-d1bf-4a6b-9ff3-30b7c280f65d.png)  
+    - 위의 식에서, ```|Ci|```는 Cluster의 Size를 의미한다.
+    - ```m - mi```는 전체 Cluster의 Centroid - Cluster의 Centroid를 의미한다.
+  - Cluster Cohesion + Cluster Separation = K가 늘어나도 항상 같은 값으로 유지된다.
+  - Silhouette coefficient
