Update 5. Naive Bayes.md

--- a/2022-Data Science/5. Naive Bayes.md
+++ b/2022-Data Science/5. Naive Bayes.md
@@ -53,3 +53,15 @@
 
 - 각 분자(각 단어의 등장 빈도)에 +1을 해준다.
   - 이후, 각 분모에 전체 단어의 갯수를 더한다.
+
+## Evaluation : Classifier
+> 제대로 분류가 되었는지 평가하는 지표를 알아보자.  
+
+- Confusion Matix  
+![image](https://user-images.githubusercontent.com/71700079/162932295-7e13c91f-014e-4edd-b171-76db6ceb5d7a.png)  
+  - Classifier Accuracy = (TP + TN) / ALL
+  - Error rate = 1 - Accuracy = (FP + FN) / ALL
+  - Sensitivity : TP/P (전체 YES 중 제대로 검사된 YES)
+  - Specificity : TN/N (전체 NO 중 제대로 검사된 NO)
+  - Precision : TP / (TP+FP)
+  - Recall : TP / (TP + FN)
