--- a/2022-Data Science/7.k-NN.md
+++ b/2022-Data Science/7.k-NN.md
@@ -20,7 +20,8 @@
   - Value of K(Number of Nearest Neighbors)
 - Tie Break의 경우에는, Random으로 뽑거나, 거리에 따른 Weight를 주어서 더 높은 Class의 쪽으로!
 
-### 1-Nearest Neighbor : Voronoi Diagram
+### 1-Nearest Neighbor : Voronoi Diagram  
+![image](https://user-images.githubusercontent.com/71700079/163662149-6b4d60ba-8118-451e-81f8-5cd6454033fe.png)  
 
 ## Issues
 - Scaling Issue
