--- a/2022-Data Science/2. Data Type.md
+++ b/2022-Data Science/2. Data Type.md
@@ -23,7 +23,7 @@
 
 ## Basic Data Types
 - 측정수준
-  - 명목(Nomial)
+  - 명목(Nominal)
     - 순위가 존재하지 않는다.
     - 셀 수는 있지만, 그 값을 평균을 내는 것은 의미가 없다.
     - 확인분류를 통해 비교한다.
