Update 8. Data wrangling.md

--- a/2022-Data Science/8. Data wrangling.md
+++ b/2022-Data Science/8. Data wrangling.md
@@ -95,3 +95,12 @@ df.fillna(df.mean().round(2)) # Default는 Axis = 0, 모든 Row들의 평균을 
 ![image](https://user-images.githubusercontent.com/71700079/166407731-5314ca5b-21af-4b02-a4e6-5976c8eae691.png)  
   - Mahalanobis Distance  
 
+## Data Encoding
+> Numerical Variable을 Categorical Data로 바꾼다던지,  
+> Categorical Data를 Numerical Variable로 바꾸는 등의 행동.  
+
+- Numerical to Categoriacal
+  - ex) Scores to Grades
+- Categorical to Numerical
+  - ex) Lable Encoding, One Hot Encoding(Set of binary Variables)
+![image](https://user-images.githubusercontent.com/71700079/166408583-deca9b2a-7326-4496-a2fa-f6bcf3820a21.png)
