Update 9. Statistical Inference.md

--- a/2022-Data Science/9. Statistical Inference.md
+++ b/2022-Data Science/9. Statistical Inference.md
@@ -47,3 +47,8 @@
 - __"Big"__ 은 하나의 기계로 처리할 수 없을 때 적용한다.
   - Data가 너무 방대해서 하나의 컴퓨터로는 처리할 수 없을 때, Big Data라고 간주한다.
   - 시대에 따라 Big의 기준이 바뀌게 될 것이다.
+- __Big Data__ 는 문화적 현상이다.
+  - 얼마나 많은 Data가 생활의 일부를 이루고 있는지 보여준다.
+- 4V
+  - Volume, Variety, Velocity, Value
+  - Big Data를 규정하는 하나의 방식으로 이 용어들을 이용한다.
